--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,13 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports
+    {
+        mavenBom 'com.vaadin:vaadin-bom:13.0.3'
+    }
+}
+
 dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
@@ -33,6 +40,7 @@ dependencies {
     // https://mvnrepository.com/artifact/javax.inject/javax.inject
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
+//    implementation 'com.vaadin:vaadin-spring-boot-starter'
 
     compile 'com.vk.api:sdk:0.5.11'
     implementation 'org.springframework.session:spring-session-core'
