--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,20 @@
+buildscript {
+    ext.kotlin_version = '1.3.30'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 plugins {
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'java'
 }
 
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'kotlin'
 
 group = 'dev.yurii'
 version = '0.0.1-SNAPSHOT'
@@ -19,17 +30,10 @@ repositories {
     mavenCentral()
 }
 
-dependencyManagement {
-    imports
-    {
-        mavenBom 'com.vaadin:vaadin-bom:13.0.3'
-    }
-}
-
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -40,7 +44,7 @@ dependencies {
     // https://mvnrepository.com/artifact/javax.inject/javax.inject
     compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
-//    implementation 'com.vaadin:vaadin-spring-boot-starter'
+    runtime 'com.h2database:h2'
 
     compile 'com.vk.api:sdk:0.5.11'
     implementation 'org.springframework.session:spring-session-core'
@@ -50,4 +54,17 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
