--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
 plugins {
     id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id "com.moowork.node" version "1.3.1"
     id 'java'
 }
 
