Sub project build using gradle kotlin

--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,14 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://localhost/socialdev?user=socialdev&password=socialdev
-
 platform.vk.callback.origin=http://callback.vkdev.eu.ngrok.io
 platform.vk.app.origin=http://vkdev.eu.ngrok.io
-
-
 spring.jpa.open-in-view=false
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
