--- a/schema/application.properties
+++ b/schema/application.properties
@@ -1,3 +1,10 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty" for whole file
 spring.datasource.url=jdbc:postgresql://localhost/socialdev?user=socialdev&password=socialdev
 platform.vk.callback.origin=http://callback.vkdev.eu.ngrok.io
 platform.vk.app.origin=http://vkdev.eu.ngrok.io
